# issue-downloader

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test-build.yml  test.yml
src/issue_downloader/: __init__.py  cli.py  github_api_query.py  github_utils.py  models.py  settings.py
tests/: test_get_issues.py
